deuxime commit de maxwell

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body ng-app="netMediaApp">
 
 <header class="container page-header">
-     <h1>NetMedida</h1>
+     <h1>NetMedida !</h1>
     <h3>Better than Netflix Faster than PopCornTime</h3>
 </header>
 
