Nettoyage des fichiers (suppression des references a avancés) + suppression des images

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 <script src="vendors/js/angular-route.min.js"></script>
 <!-- <script src="scripts/core/filters/capitalize.js"></script> -->
 
-<script src="src/heroes/app.js"></script>
+<script src="src/movies/app.js"></script>
 
-<script src="src/heroes/controllers/heroCtrl.js"></script>
-<script src="src/heroes/controllers/heroesCtrl.js"></script>
+<script src="src/movies/controllers/movieCtrl.js"></script>
+<script src="src/movies/controllers/moviesCtrl.js"></script>
 
-<script src="src/heroes/directives/heroBlock.js"></script>
-<script src="src/heroes/directives/changeStatus.js"></script>
+<script src="src/movies/directives/movieBlock.js"></script>
+<script src="src/movies/directives/changeStatus.js"></script>
 
-<script src="src/heroes/services/hero.js"></script>
-<script src="src/heroes/services/urlConfig.js"></script>
+<script src="src/movies/services/movie.js"></script>
+<script src="src/movies/services/urlConfig.js"></script>
 
 </html>
