Essais affichage page film

--- a/src/movies/directives/movie-block.html
+++ b/src/movies/directives/movie-block.html
@@ -10,7 +10,7 @@
             <h3>{{movie.title}}</h3>
             <h4>{{movie.release_date}}</h4>
             <p>{{movie.vote_average}}</p>
-            <button class="btn btn-primary" ng-click="showMovie(movie.id)">Modifier</button>
+            <button class="btn btn-primary" ng-click="showMovie(movie.id)">Regarder</button>
         </div>
     </div>
 </div>
