--- a/src/movies/directives/movie-block.html
+++ b/src/movies/directives/movie-block.html
@@ -5,9 +5,9 @@
         <span ng-switch-when="2" class="label label-danger">Blessé(e)</span>
     </div>
     <div class="thumbnail">
-        <img src="http://image.tmdb.org/t/p/w500{{movie.poster_path}}" class="image-thumbnail"> 
+        <!-- <img src="http://image.tmdb.org/t/p/w500{{movie.poster_path}}" class="image-thumbnail">  -->
         <div class="caption">
-            <h3>{{movie.title}}</h3>
+            <h3>{{movie}}</h3>
             <h4>{{movie.release_date}}</h4>
             <p>{{movie.vote_average}}</p>
             <button class="btn btn-primary" ng-click="showMovie(movie.id)">Regarder</button>
