--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 
 <script src="src/movies/controllers/movieCtrl.js"></script>
 <script src="src/movies/controllers/moviesCtrl.js"></script>
+<script src="src/movies/controllers/moviesSearchCtrl.js"></script>
 <script src="src/movies/controllers/seriesCtrl.js"></script>
 <script src="src/movies/controllers/serieCtrl.js"></script>
+<script src="src/movies/controllers/seriesSearchCtrl.js"></script>
 
 <script src="src/movies/directives/movieBlock.js"></script>
 <script src="src/movies/directives/changeStatus.js"></script>
