'Modifs dispo et positions page profil'

--- a/profil/profil.html
+++ b/profil/profil.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 
-      <section class="sidebar">
+      <div class="sidebar">
 
         <div class="user-pic"></div>
 
@@ -23,17 +23,16 @@
 
         <div class="social-content">
 
-          <div class="social-icon"><img src="images/facebook44.svg" width="30px"></div>
-          <div class="social-icon"><img src="images/twitter.svg" width="30px"></div>
-          <div class="social-icon"><img src="images/google-plus.svg" width="30px"></div>
-          <div class="social-icon"><img src="images/facebook44.svg" width="30px"></div>
+          <div class="social-icon"><img src="images/facebook44.svg"></div>
+          <div class="social-icon"><img src="images/twitter.svg"></div>
+          <div class="social-icon"><img src="images/google-plus.svg"></div>
+          <div class="social-icon"><img src="images/facebook44.svg"></div>
 
         </div>
 
-      </section>
+      </div>
 
-			<section class="content">
-
+			<div class="content">
 
 				<h1 class="title-details">Films</h1>
 
@@ -41,7 +40,7 @@
 
 				<div class="top">
 
-					<div class="picto-top"><img src="images/top.png" width="30px"></div><h2 class="myTop-Flop">Mon Top<h2>
+					<div class="picto-top"><img src="images/top.svg" width="30px"></div><h2 class="myTop-Flop">Mon Top<h2>
 
 						<div class="thumb"></div>
 						<div class="thumb"></div>
@@ -54,7 +53,7 @@
 
 				<div class="flop">
 
-					<div class="picto-top"><img src="images/flop.png" width="40px"></div><h2 class="myTop-Flop">Mon Flop<h2>
+					<div class="picto-top"><img src="images/flop.svg" width="40px"></div><h2 class="myTop-Flop">Mon Flop<h2>
 
 						<div class="thumb"></div>
 						<div class="thumb"></div>
