--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
      <h1>NetMedida !</h1>
     <h3>Better than Netflix Faster than PopCornTime</h3>
 </header>
+<button ng-click="authenticate('facebook')">Sign in with Facebook</button>
+<div id="fb-root">
+</div>
 
 <section class="container">
     <ng-view></ng-view>
@@ -29,12 +32,16 @@
 
 <script src="vendors/js/angular.min.js"></script>
 <script src="vendors/js/angular-route.min.js"></script>
+<script src="vendors/js/fb.js"></script>
+
 <!-- <script src="scripts/core/filters/capitalize.js"></script> -->
 
 <script src="src/movies/app.js"></script>
 
 <script src="src/movies/controllers/movieCtrl.js"></script>
 <script src="src/movies/controllers/moviesCtrl.js"></script>
+<script src="src/movies/controllers/LoginCtrl.js"></script>
+
 
 <script src="src/movies/directives/movieBlock.js"></script>
 <script src="src/movies/directives/changeStatus.js"></script>
