ajout style movie série (ajout icon, position, colorFont)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head lang="en">
     <link rel="stylesheet" href="vendors/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="vendors/css/custom.css"/>
+    <link rel="stylesheet" href="src/styles/styles.css"/>
+
+
+
     <!-- <link rel="icon" href=""> -->
     <meta charset="UTF-8">
     <title>NetMedia</title>
