ajout integration page movie et série par mehdi

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <a class="selected" href="#/films">FILMS</a>
         <a class="" href="#/series">SÉRIES</a>
     </div>
+    <img src="images/burger-menu.png"/ class="burger-menu"/>
+    <nav class="left-menu">
+    </nav>
 
     <!-- <div class="filters-search-user">
         <div class="filters">
