--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 <body ng-app="netMediaApp">
 
-   
+   <div class="topbar-phone">
+        <img id="showLeft" src="images/burger-menu.png" class="burger-menu"/>
+        <img src="images/logo-netmedia-ok.png" class="logo-phone"/>
+    </div>
 
 
 <!-- <header class="container page-header">
