--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <script src="vendors/js/angular.min.js"></script>
 <script src="vendors/js/angular-route.min.js"></script>
 <script src="vendors/js/fb.js"></script>
-<script src="https://rawgithub.com/gsklee/ngStorage/master/ngStorage.js"></script>
+<script src="vendors/js/angular-storage.js"></script>
 
 <!-- <script src="scripts/core/filters/capitalize.js"></script> -->
 
