--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body ng-app="netMediaApp">
 
-   
+
 
 
 <!-- <header class="container page-header">
@@ -88,7 +88,7 @@
 </script>
 <script src="vendors/js/angular.min.js"></script>
 <script src="vendors/js/angular-route.min.js"></script>
-<script src="vendors/js/fb.js"></script>
+<script src="vendors/js/form.js"></script>
 <script src="https://rawgithub.com/gsklee/ngStorage/master/ngStorage.js"></script>
 
 <!-- <script src="scripts/core/filters/capitalize.js"></script> -->
@@ -110,6 +110,6 @@
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
-      
+
 
 </html>
