--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="src/styles/styles.css"/>
     <!-- <link rel="icon" href=""> -->
     <link rel="stylesheet" href="dist/css/main.css"/>
+    <link rel="stylesheet" href="dist/css/login.css"/>
     <link rel="stylesheet" type="text/css" href="dist/css/component.css" />
     <script src="dist/js/modernizr.custom.js"></script>
     <meta charset="UTF-8">
