--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html">
 <head lang="en">
-    <!-- <link rel="stylesheet" href="vendors/css/bootstrap.min.css"/> -->
     <link rel="stylesheet" href="vendors/css/custom.css"/>
     <link rel="stylesheet" href="src/styles/styles.css"/>
-    <!-- <link rel="icon" href=""> -->
     <link rel="stylesheet" href="dist/css/main.css"/>
     <link rel="stylesheet" href="dist/css/login.css"/>
     <link rel="stylesheet" type="text/css" href="dist/css/component.css" />
@@ -17,50 +15,6 @@
 
 <body ng-app="netMediaApp">
 
-   <div class="topbar-phone">
-        <img id="showLeft" src="images/burger-menu.png" class="burger-menu"/>
-        <img src="images/logo-netmedia-ok.png" class="logo-phone"/>
-    </div>
-
-<!-- <header class="container page-header">
-    <img src="images/logo-netmedia-ok.png" class="logo-accueil"/>
-    <div class="menu-navigation">
-        <a class="" href="">DÉCOUVRIR</a>
-        <a class="selected" href="#/films">FILMS</a>
-        <a class="" href="#/series">SÉRIES</a>
-    </div>
-    <img src="images/burger-menu.png"/ class="burger-menu"/>
-    <nav class="left-menu">
-    </nav>
-
-     <div class="filters-search-user">
-        <div class="filters">
-            <span class="genre">Genre : </span>
-            <select>
-                <option value="">Tous</option>
-                <option value="action">Action</option>
-                <option value="aventure">Aventure</option>
-                <option value="comedie">Comédie</option>
-                <option value="horreur">Horreur</option>
-            </select>
-            <span class="genre">Trier par : </span>
-            <select>
-                <option value="popularite">Popularité</option>
-                <option value="note">Note</option>
-                <option value="annee">Année</option>
-            </select>
-        </div>
-        <div class="search">
-            <input type="search" placeholder="Titre, acteur ..." name="the_search">
-        </div>
-        <div class="user">
-            <img class="user-img" src="images/placeholder.png"/>
-            <div class="user-name">User Name</div>
-        </div>
-    </div>
-
-</header> -->
-
 </div>
 
 <section class="container">
@@ -72,47 +26,17 @@
 </footer>
 </body>
 
-<script>
- window.fbAsyncInit = function() {
-   FB.init({
-     appId      : '375442245978064',
-     xfbml      : true,
-     version    : 'v2.3'
-   });
- };
-
- (function(d, s, id){
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) {return;}
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/sdk.js";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-</script>
 <script src="vendors/js/angular.min.js"></script>
 <script src="vendors/js/angular-route.min.js"></script>
 <script src="vendors/js/angular-storage.js"></script>
 <script src="vendors/js/form.js"></script>
-
-<!-- <script src="scripts/core/filters/capitalize.js"></script> -->
-
 <script src="src/movies/app.js"></script>
-
 <script src="src/movies/controllers/moviesCtrl.js"></script>
 <script src="src/movies/controllers/LoginCtrl.js"></script>
-
 <script src="src/movies/controllers/seriesCtrl.js"></script>
-<script src="src/movies/directives/movieBlock.js"></script>
 <script src="src/movies/directives/presenter.js"></script>
-
 <script src="src/movies/services/movie.js"></script>
 <script src="src/movies/services/serie.js"></script>
-<script src="src/movies/services/urlConfig.js"></script>
 <script src="//cdn.jsdelivr.net/satellizer/0.11.1/satellizer.min.js"></script>
-
-
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-
-
-
+<script type="text/javascript" src="src/movies/services/urlConfig.js"></script>
 </html>
